--- a/src/styles/Schedule.module.css
+++ b/src/styles/Schedule.module.css
@@ -417,12 +417,11 @@
   font-size: 18px;
   font-family: 'Noto Sans KR', sans-serif;
   transition: background-color 0.3s ease;
-  margin: 20px 0;
-  float: right;
-  margin-left: 10px;
+  margin-left:-500px;
 }
 
 .scheduleShareBtn {
+  margin-left:-300px;
   background-color: #f5f5f5;
   color: black;
 }
@@ -829,6 +828,30 @@
   background-color: #ffffff;
   border-bottom: 1px solid #e0e0e0;
   border-radius: 12px 12px 0 0;
+}
+
+.headerMenu {
+  width: 100%;
+  max-width: 100vw;
+  height: 5.69rem;
+  flex-shrink: 0;
+  color: #757575;
+  font-size: 0.83vw;
+  font-style: normal;
+  font-weight: 500;
+  letter-spacing: -0.32px;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.logo {
+  margin: 1vh 5.68vw;
+  width: 183px;
+  height: 57px;
+  flex-shrink: 0;
 }
 
 .chatTitle {
