--- a/src/styles/Schedule.module.css
+++ b/src/styles/Schedule.module.css
@@ -51,7 +51,7 @@
   width: 722px;
   height: fit-content;
   border: none;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid #000000;
   font-size: 16px;
   margin-left: 10px;
 }
@@ -182,7 +182,7 @@
   font-style: normal;
   font-weight: 600;
   line-height: normal;
-  background-color: black;
+  background-color: #000000;
   border-radius: 50px;
   padding: 8px 20px 12px 120px;
   margin-left: 38%;
@@ -337,7 +337,7 @@
   top: 0;
   right: 10px;
   padding: 5px;
-  color: black;
+  color: #000000;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -357,7 +357,7 @@
 
 .deleteButton {
   background-color: #f44336;
-  color: white;
+  color: #ffffff;
   padding: 8px 16px;
   border: none;
   border-radius: 4px;
@@ -410,7 +410,7 @@
 .scheduleUpdateBtn,
 .scheduleShareBtn {
   background-color: #76adac;
-  color: white;
+  color: #ffffff;
   padding: 12px 24px;
   border: none;
   cursor: pointer;
@@ -423,7 +423,7 @@
 .scheduleShareBtn {
   margin-left:-300px;
   background-color: #f5f5f5;
-  color: black;
+  color: #000000;
 }
 
 .pageContainer {
@@ -710,8 +710,8 @@
 .addButton {
   width: 34px;
   height: 80px;
-  background-color: #74a5da;
-  color: white;
+  color: #74a5da;
+  background-color: #ffffff;
   font-size: 24px;
   font-weight: bold;
   text-align: center;
@@ -985,7 +985,7 @@
 
 .copyButton {
   background-color: #007bff;
-  color: white;
+  color: #ffffff;
   padding: 8px 16px;
   border: none;
   border-radius: 8px;
@@ -995,7 +995,7 @@
 
 .confirmButton {
   background-color: #007bff;
-  color: white;
+  color: #ffffff;
   padding: 12px 24px;
   border: none;
   border-radius: 8px;
@@ -1035,7 +1035,7 @@
 
 .chattingModalContainer {
   position: relative;
-  background-color: white;
+  background-color: #ffffff;
   padding: 32px;
   border-radius: 16px;
   width: 600px;
@@ -1175,7 +1175,7 @@
   top: 0;
   right: 10px;
   padding: 5px;
-  color: black;
+  color: #000000;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1196,7 +1196,7 @@
 .deleteButton,
 .leaveButton {
   background-color: #f44336;
-  color: white;
+  color: #ffffff;
   padding: 8px 16px;
   border: none;
   border-radius: 4px;
@@ -1394,7 +1394,7 @@
 
 .confirmButton {
   background-color: #007bff;
-  color: white;
+  color: #ffffff;
   padding: 10px 20px;
   border: none;
   border-radius: 8px;
