--- a/src/styles/onBoard.module.css
+++ b/src/styles/onBoard.module.css
@@ -128,7 +128,7 @@
   justify-content: center;
   align-items: center;
   border-radius: 50%;
-  background-color: black;
+  background-color: #000000;
   margin-top: 10px;
   cursor: pointer;
   transition: background-color 0.3s ease;
