--- a/src/styles/Schedule.module.css
+++ b/src/styles/Schedule.module.css
@@ -711,17 +711,16 @@
   width: 34px;
   height: 80px;
   color: #74a5da;
-  background-color: #ffffff;
+  background-color: #F5F5F5;
   font-size: 24px;
   font-weight: bold;
   text-align: center;
   border: none;
-  border-radius: 8px;
   display: flex;
   align-items: center;
   justify-content: center;
   position: absolute;
-  right: 10px;
+  right: 20px;
 }
 
 .bookmarkButton {
