--- a/src/styles/Schedule.module.css
+++ b/src/styles/Schedule.module.css
@@ -417,11 +417,11 @@
   font-size: 18px;
   font-family: 'Noto Sans KR', sans-serif;
   transition: background-color 0.3s ease;
-  margin-left:-500px;
+  margin-left: -500px;
 }
 
 .scheduleShareBtn {
-  margin-left:-300px;
+  margin-left: -300px;
   background-color: #f5f5f5;
   color: #000000;
 }
@@ -711,7 +711,7 @@
   width: 34px;
   height: 80px;
   color: #74a5da;
-  background-color: #F5F5F5;
+  background-color: #f5f5f5;
   font-size: 24px;
   font-weight: bold;
   text-align: center;
@@ -1413,10 +1413,9 @@
   flex-direction: column;
   gap: 12px;
   overflow-y: auto;
-  background-color: #ffffff;
+  background-color: #e0e0e0;
   border-bottom: 1px solid #e0e0e0;
-  border-radius: 12px 12px 0 0;
-  max-height: 500px;
+  border-radius: 12px 12px 0 0
 }
 
 .message.sent {
