--- a/src/styles/Schedule.module.css
+++ b/src/styles/Schedule.module.css
@@ -1415,7 +1415,7 @@
   overflow-y: auto;
   background-color: #e0e0e0;
   border-bottom: 1px solid #e0e0e0;
-  border-radius: 12px 12px 0 0
+  border-radius: 12px 12px 0 0;
 }
 
 .message.sent {
