--- a/src/styles/Schedule.module.css
+++ b/src/styles/Schedule.module.css
@@ -8,12 +8,18 @@
 .leftSection,
 .centerSection,
 .rightSection {
+  background-color: #ffffff;
   flex: 1;
-  display: flex;
+  display: inline-flex;
   align-items: center;
   justify-content: center;
-  background: #ffffff;
-  height: auto;
+  width: 538px;
+  flex-shrink: 0;
+}
+
+.centerSection {
+  width: 844px;
+  flex-shrink: 0;
 }
 
 /* 일정 만들기를 위한 모달창 */
@@ -415,6 +421,9 @@
   border: none;
   cursor: pointer;
   font-size: 18px;
+  width: 89px;
+  height: 52px;
+  flex-shrink: 0;
   font-family: 'Noto Sans KR', sans-serif;
   transition: background-color 0.3s ease;
   margin-left: -500px;
@@ -427,22 +436,22 @@
 }
 
 .pageContainer {
-  width: 600px;
-  height: 1350px;
+  width: 538px;
+  height: 100%;
   flex-shrink: 0;
   display: flex;
   flex-direction: column;
-  background-color: #ffffff;
 }
 
 .tabContainer {
+  margin-left: 7%;
   display: flex;
   margin-bottom: 20px;
 }
 
 .tabButton {
   display: flex;
-  width: 300px;
+  width: 230px;
   height: 60px;
   flex-direction: column;
   align-items: center;
@@ -473,7 +482,6 @@
   padding: 21px;
   display: flex;
   margin-bottom: 20px;
-  width: 560px;
 }
 
 .input {
@@ -625,6 +633,10 @@
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
+.noPlaces {
+  margin-left: 8%;
+}
+
 .placeItem {
   display: flex;
   align-items: center;
@@ -635,7 +647,9 @@
   margin-bottom: 20px;
   position: relative;
   transition: box-shadow 0.3s ease;
+  margin-left: 5%;
   height: 130px;
+  width: 460px;
 }
 
 .placeItem:hover {
@@ -673,12 +687,12 @@
 }
 
 .deleteZone {
-  margin-left: 40%;
   margin-top: 100px;
+  justify-content: flex-end;
+  margin-left: 45%;
   width: 120px;
   height: 30px;
-  color: #ffffff;
-  background-color: #004a55;
+  color: red;
 }
 
 .placeInfo {
@@ -750,6 +764,7 @@
 
 .travelSearchContainerSearch,
 .travelSearchContainer {
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: right;
@@ -771,7 +786,7 @@
 
 .travelSearchContainerSearch input,
 .travelSearchContainer input {
-  width: 460px;
+  width: 355px;
   padding: 10px 15px;
   font-size: 16px;
   border-radius: 18px;
@@ -789,7 +804,8 @@
 
 .travelSearchContainerSearch button,
 .travelSearchContainer button {
-  padding: 10px 20px;
+  width: 67px;
+  height: 47px;
   background-color: #74a5da;
   color: #ffffff;
   border: none;
@@ -812,7 +828,7 @@
   flex-direction: column;
   justify-content: flex-end;
   width: 100%;
-  height: 100%;
+  overflow-y: auto;
   background-color: #f0f2f5;
   border: 1px solid #e0e0e0;
   border-radius: 12px;
@@ -848,8 +864,6 @@
 
 .logo {
   margin: 1vh 5.68vw;
-  width: 183px;
-  height: 57px;
   flex-shrink: 0;
 }
 
@@ -897,11 +911,12 @@
   overflow-y: scroll;
   background-color: #e0e0e0;
   border-bottom: 1px solid #e0e0e0;
-  max-height:max-content;
+  max-height: max-content;
 }
 
-.sentMessage, .receiveMessage {
-  background-color: #e9f7fe;
+.sentMessage,
+.receiveMessage {
+  background-color: #ffffff;
   border-radius: 16px;
   padding: 12px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.08);
@@ -911,8 +926,8 @@
 
 .receiveMessage {
   align-self: flex-end;
-  background-color: #636363;
-  color:#ffffff;
+  background-color: #76adac;
+  color: #ffffff;
 }
 
 .inputContainer {
@@ -1268,7 +1283,7 @@
   padding: 24px;
   border-radius: 12px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
-  width: 500px;
+  width: 600px;
   position: relative;
 }
 
@@ -1287,6 +1302,8 @@
   color: #333333;
   padding: 8px;
   transition: background-color 0.3s ease;
+  width: 20px;
+  height: 20px;
 }
 
 .closeButton:hover {
