아이콘 신규 추가

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -21,6 +21,11 @@ body {
     sans-serif;
 }
 
+body.no_scroll {
+  height: 100vh;
+  overflow: hidden;
+}
+
 a {
   color: inherit;
   text-decoration: none;
