스크롤 이벤트 제어

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -26,6 +26,11 @@ body.no_scroll {
   /*overflow: hidden;*/
 }
 
+body.no_scroll {
+  height: 100vh;
+  overflow: hidden;
+}
+
 a {
   color: inherit;
   text-decoration: none;
