--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -26,6 +26,11 @@ body.no_scroll {
   /*overflow: hidden;*/
 }
 
+body.no_scroll {
+  height: 100vh;
+  overflow: hidden;
+}
+
 a {
   color: inherit;
   text-decoration: none;
@@ -92,16 +97,16 @@ button:focus {
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #ccc;
+  background-color: #cccccc;
   border-radius: 4px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: #aaa;
+  background-color: #aaaaaa;
 }
 
 ::-webkit-scrollbar-track {
-  background: #f1f1f1;
+  background-color: #f1f1f1;
 }
 
 body::-webkit-scrollbar {
