--- a/src/styles/Schedule.module.css
+++ b/src/styles/Schedule.module.css
@@ -363,7 +363,6 @@
   color: #ffffff;
   padding: 8px 16px;
   border: none;
-  border-radius: 4px;
   cursor: pointer;
   font-size: 14px;
 }
@@ -499,7 +498,6 @@
   margin-top: 18px;
   width: 480px;
   border: none;
-  border-radius: 5px;
   background-color: #76adac;
   cursor: pointer;
   display: flex;
@@ -892,7 +890,6 @@
   color: #ffffff;
   padding: 12px 24px;
   border: none;
-  border-radius: 8px;
   font-size: 16px;
   cursor: pointer;
   transition: background-color 0.3s ease;
@@ -1014,7 +1011,6 @@
   color: #ffffff;
   padding: 12px 24px;
   border: none;
-  border-radius: 8px;
   cursor: pointer;
   margin-right: 12px;
   transition: background-color 0.3s ease;
@@ -1032,7 +1028,6 @@
   right: 16px;
   padding: 8px;
   color: #333333;
-  border-radius: 50%;
   transition: background-color 0.3s ease;
   margin-right: 20px;
 }
@@ -1198,7 +1193,6 @@
   color: #ffffff;
   padding: 8px 16px;
   border: none;
-  border-radius: 4px;
   cursor: pointer;
   font-size: 14px;
 }
@@ -1223,7 +1217,7 @@
   transform: translate(-50%, -50%);
   background-color: #ffffff;
   padding: 20px;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   z-index: 1000;
 }
 
@@ -1296,7 +1290,6 @@
   color: #ffffff;
   padding: 8px 16px;
   border: none;
-  border-radius: 8px;
   cursor: pointer;
   font-size: 14px;
   transition: background-color 0.3s ease;
@@ -1357,7 +1350,6 @@
   color: #ffffff;
   padding: 8px 16px;
   border: none;
-  border-radius: 8px;
   cursor: pointer;
   font-size: 14px;
   transition: background-color 0.3s ease;
@@ -1368,7 +1360,6 @@
   color: #ffffff;
   padding: 10px 20px;
   border: none;
-  border-radius: 8px;
   cursor: pointer;
   font-size: 14px;
   transition: background-color 0.3s ease;
@@ -1393,7 +1384,6 @@
   background-color: #e0e0e0;
   color: #555555;
   padding: 8px 12px;
-  border-radius: 8px;
   cursor: pointer;
   font-size: 14px;
   transition: background-color 0.3s ease;
