--- a/src/styles/Schedule.module.css
+++ b/src/styles/Schedule.module.css
@@ -216,13 +216,10 @@
 .scheduleCounterShare {
   display: inline-flex;
   align-items: center;
-  margin-right: 100px;
   font-size: 22px;
   font-weight: 700;
   word-wrap: break-word;
-  margin-top: 77px;
-  margin-bottom: 17px;
-  margin-left: -80px;
+  margin: 77px 100px 17px -80px;
 }
 
 .scheduleCounter .counterNumber,
@@ -854,11 +851,6 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-}
-
-.logo {
-  margin: 1vh 5.68vw;
-  flex-shrink: 0;
 }
 
 .chatTitle {
