--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,8 +3,9 @@ body {
   color: #000000;
   margin: 0;
   padding: 0;
-  width: 100%;
-  max-width: 100vw;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
   box-sizing: border-box;
   font-family:
     'Noto Sans KR',
@@ -19,11 +20,6 @@ body {
     Droid Sans,
     Helvetica Neue,
     sans-serif;
-}
-
-body.no_scroll {
-  height: 100vh;
-  overflow: hidden;
 }
 
 a {
