--- a/src/styles/Schedule.module.css
+++ b/src/styles/Schedule.module.css
@@ -216,13 +216,10 @@
 .scheduleCounterShare {
   display: inline-flex;
   align-items: center;
-  margin-right: 100px;
   font-size: 22px;
   font-weight: 700;
   word-wrap: break-word;
-  margin-top: 77px;
-  margin-bottom: 17px;
-  margin-left: -80px;
+  margin: 77px 100px 17px -80px;
 }
 
 .scheduleCounter .counterNumber,
@@ -363,7 +360,6 @@
   color: #ffffff;
   padding: 8px 16px;
   border: none;
-  border-radius: 4px;
   cursor: pointer;
   font-size: 14px;
 }
@@ -499,7 +495,6 @@
   margin-top: 18px;
   width: 480px;
   border: none;
-  border-radius: 5px;
   background-color: #76adac;
   cursor: pointer;
   display: flex;
@@ -858,11 +853,6 @@
   justify-content: space-between;
 }
 
-.logo {
-  margin: 1vh 5.68vw;
-  flex-shrink: 0;
-}
-
 .chatTitle {
   margin: 0;
   font-size: 24px;
@@ -892,7 +882,6 @@
   color: #ffffff;
   padding: 12px 24px;
   border: none;
-  border-radius: 8px;
   font-size: 16px;
   cursor: pointer;
   transition: background-color 0.3s ease;
@@ -1014,7 +1003,6 @@
   color: #ffffff;
   padding: 12px 24px;
   border: none;
-  border-radius: 8px;
   cursor: pointer;
   margin-right: 12px;
   transition: background-color 0.3s ease;
@@ -1032,7 +1020,6 @@
   right: 16px;
   padding: 8px;
   color: #333333;
-  border-radius: 50%;
   transition: background-color 0.3s ease;
   margin-right: 20px;
 }
@@ -1198,7 +1185,6 @@
   color: #ffffff;
   padding: 8px 16px;
   border: none;
-  border-radius: 4px;
   cursor: pointer;
   font-size: 14px;
 }
@@ -1223,7 +1209,7 @@
   transform: translate(-50%, -50%);
   background-color: #ffffff;
   padding: 20px;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   z-index: 1000;
 }
 
@@ -1296,7 +1282,6 @@
   color: #ffffff;
   padding: 8px 16px;
   border: none;
-  border-radius: 8px;
   cursor: pointer;
   font-size: 14px;
   transition: background-color 0.3s ease;
@@ -1357,7 +1342,6 @@
   color: #ffffff;
   padding: 8px 16px;
   border: none;
-  border-radius: 8px;
   cursor: pointer;
   font-size: 14px;
   transition: background-color 0.3s ease;
@@ -1368,7 +1352,6 @@
   color: #ffffff;
   padding: 10px 20px;
   border: none;
-  border-radius: 8px;
   cursor: pointer;
   font-size: 14px;
   transition: background-color 0.3s ease;
@@ -1393,7 +1376,6 @@
   background-color: #e0e0e0;
   color: #555555;
   padding: 8px 12px;
-  border-radius: 8px;
   cursor: pointer;
   font-size: 14px;
   transition: background-color 0.3s ease;
