--- a/src/styles/Schedule.module.css
+++ b/src/styles/Schedule.module.css
@@ -2,7 +2,7 @@
 .layoutContainer {
   display: flex;
   width: 100vw;
-  height: 100%;
+  height: 100vh;
 }
 
 .leftSection,
@@ -137,8 +137,17 @@
   width: 1920px;
   height: 290px;
   flex-shrink: 0;
-  background: rgba(0, 0, 0, 0.2);
   object-fit: cover;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 1;
 }
 
 .scheduleExplainDiv,
@@ -301,7 +310,7 @@
 .scheduleList {
   margin-top: 40px;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   gap: 20px;
   margin-left: -7%;
 }
@@ -334,10 +343,9 @@
 
 .threeDots {
   position: absolute;
-  top: 0;
+  top: 25px;
   right: 10px;
   padding: 5px;
-  color: #000000;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -377,7 +385,7 @@
 }
 
 .scheduleContent {
-  padding: 5px;
+  padding: 12px;
 }
 
 .scheduleName {
@@ -617,7 +625,6 @@
   text-align: center;
   margin: 20px 0;
   padding: 10px;
-  border-radius: 5px;
 }
 
 .noText {
@@ -817,32 +824,24 @@
 .chatContainer {
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
   width: 100%;
+  max-height: 80vh;
   overflow-y: auto;
-  background-color: #f0f2f5;
-  border: 1px solid #e0e0e0;
-  border-radius: 12px;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
 }
 
 .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 16px;
+  padding: 14px;
   background-color: #ffffff;
   border-bottom: 1px solid #e0e0e0;
-  border-radius: 12px 12px 0 0;
 }
 
 .headerMenu {
   width: 100%;
-  max-width: 100vw;
-  height: 5.69rem;
   flex-shrink: 0;
   color: #757575;
-  font-size: 0.83vw;
   font-style: normal;
   font-weight: 500;
   letter-spacing: -0.32px;
@@ -1088,7 +1087,7 @@
   height: 559px;
   flex-shrink: 0;
   border: 1px solid #d9d9d9;
-  background: #fff;
+  background-color: #ffffff;
 }
 
 .noScheduleMessage {
@@ -1154,29 +1153,6 @@
   justify-content: center;
   align-items: center;
   transition: opacity 0.3s ease;
-}
-
-.threeDots {
-  position: absolute;
-  top: 0;
-  right: 10px;
-  padding: 5px;
-  color: #000000;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.deleteMenu {
-  position: absolute;
-  top: 40px;
-  right: 10px;
-  background-color: #fff;
-  border: 1px solid #ddd;
-  padding: 10px;
-  border-radius: 5px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  z-index: 100;
 }
 
 .deleteButton,
