--- a/src/styles/Travel.module.css
+++ b/src/styles/Travel.module.css
@@ -85,8 +85,7 @@
 
 .input {
   background-color: #ffffff;
-  padding: 10px;
-  margin: 5px 5px 5px 0;
+  padding: 11px;
   border: 1px solid #ccc;
   border-radius: 4px;
   flex: 1;
@@ -96,10 +95,21 @@
 .searchButton {
   background-color: #76adac;
   color: #ffffff;
-  padding: 10px 20px;
   margin-left: 5px;
   border: none;
   cursor: pointer;
+  display: inline-flex;
+  flex-shrink: 0;
+  width: 79px;
+  height: 50px;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  padding: 8px 20px;
 }
 
 .placeList {
@@ -187,7 +197,6 @@
 
 .bookmarkButton {
   position: absolute;
-  top: 10px;
   right: 10px;
   background: none;
   border: none;
@@ -308,7 +317,7 @@
   width: fit-content;
   max-width: 1465px;
   height: auto;
-  margin-left: 10.5%;
+  margin: auto;
 }
 
 .infoText {
@@ -346,8 +355,7 @@
   font-weight: 600;
   line-height: normal;
   font-family: 'Noto Sans KR', sans-serif;
-  margin-bottom: 20px;
-  margin-left: 10.5%;
+  margin-left: 200px;
 }
 
 .detailTitleIcon {
@@ -604,20 +612,23 @@
 
 .bookmarkBtn,
 .chooseBtn {
-  width: 300px;
-  height: 55px;
   display: flex;
   align-items: center;
+  justify-content: center;
+  width: 300px;
+  height: 55px;
   padding: 10px 20px;
-  font-size: 16px;
-  font-weight: bold;
   border: none;
   border-radius: 4px;
   cursor: pointer;
   font-family: 'Noto Sans KR', sans-serif;
   gap: 10px;
   margin-left: 30px;
-  margin-right: 30px;
+  text-align: center;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
 }
 
 .bookmarkBtn {
