--- a/src/styles/Schedule.module.css
+++ b/src/styles/Schedule.module.css
@@ -1,8 +1,8 @@
 /* 일정 만들기 1/3 분할 */
 .layoutContainer {
-    display: flex;
-    width: 100vw;
-    height: 100vh;
+    display: inline-flex;
+    width: 1920px;
+    height: 989px;
 }
 
 .leftSection,
@@ -13,12 +13,6 @@
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    width: 538px;
-    flex-shrink: 0;
-}
-
-.centerSection {
-    width: 844px;
     flex-shrink: 0;
 }
 
@@ -991,9 +985,10 @@
 /* 일정만들기 3번 : 채팅 */
 .chatContainer {
     display: flex;
+    align-self:flex-start;
     flex-direction: column;
-    width: 100%;
-    max-height: 80vh;
+    width: 538px;
+    height: 989px;
     overflow-y: auto;
 }
 
@@ -1540,6 +1535,19 @@
     display: flex;
     flex-direction: column;
     margin-bottom: 10px;
+}
+
+.dateSeparator {
+    width: 168px;
+    color: #555;
+    text-align: justify;
+    justify-content: center;
+    margin:auto;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 25px;
+    display: inline-flex;
 }
 
 .userInfo {
