--- a/src/styles/Travel.module.css
+++ b/src/styles/Travel.module.css
@@ -51,10 +51,9 @@
 
 /* 여행지 탐색 기본, 검색 */
 .container {
-  margin-top: 30px;
+  padding:15px;
   display: flex;
-  height: 100%;
-  overflow: hidden;
+  overflow-y: hidden;
 }
 
 .container::before {
@@ -73,8 +72,7 @@
 
 .listContainer {
   width: 50%;
-  padding: 20px;
-  overflow-y: auto;
+  padding: 10px;
 }
 
 .searchContainer {
@@ -120,14 +118,15 @@
 
 .placeItem {
   display: flex;
-  margin-bottom: 20px;
-  padding: 15px;
+  margin-bottom: 10px;
+  padding: 10px;
   border: 1px solid #ddd;
   border-radius: 8px;
   align-items: center;
   justify-content: space-between;
   background-color: #fff;
   transition: box-shadow 0.3s ease;
+  height:108px;
 }
 
 .placeItem:hover {
@@ -136,8 +135,8 @@
 
 .placeThumbnail {
   margin-right: 20px;
-  width: 150px;
-  height: 150px;
+  width: 100px;
+  height: 100px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -220,8 +219,6 @@
 
 .mapContainer {
   width: 50%;
-  padding: 20px;
-  height: auto;
 }
 
 .headerContainer {
@@ -574,7 +571,7 @@
   margin-bottom: 10px;
   font-size: 20px;
   color: #2d2d2d;
-  font-weight: 505;
+  font-weight: 500;
 }
 
 .addressLabel img,
