일정 만들기 공유 변경 및 css 리팩토링

--- a/src/styles/Find.module.css
+++ b/src/styles/Find.module.css
@@ -110,7 +110,7 @@
   text-align: center;
   align-items: center;
   flex-shrink: 0;
-  color: #fff;
+  color: #ffffff;
   font-family:
     Noto Sans KR,
     sans-serif;
