--- a/src/styles/Join.module.css
+++ b/src/styles/Join.module.css
@@ -29,7 +29,7 @@
   height: 814px;
   padding: 20px;
   border-radius: 30px;
-  background: #fff;
+  background: #ffffff;
   box-shadow: 0 8px 24px rgba(0, 0, 0, 0.3);
   display: flex;
   flex-direction: column;
@@ -65,7 +65,7 @@
   height: 55px;
   border: 1px solid #848282;
   border-radius: 5px;
-  background: #fff;
+  background: #ffffff;
   font-size: 16px;
   padding-left: 15px;
 }
@@ -138,7 +138,7 @@
   height: 55px;
   border: 1px solid #848282;
   border-radius: 5px;
-  background: #fff;
+  background: #ffffff;
   font-size: 16px;
   padding-left: 15px;
 }
@@ -176,7 +176,7 @@
   height: 55px;
   border: 1px solid #848282;
   border-radius: 5px;
-  background: #fff;
+  background: #ffffff;
   font-size: 16px;
   padding-left: 15px;
 }
@@ -185,7 +185,7 @@
   width: 106px;
   height: 55px;
   background-color: #57c5b6;
-  color: #fff;
+  color: #ffffff;
   font-size: 16px;
   border: none;
   cursor: pointer;
