--- a/src/styles/Login.module.css
+++ b/src/styles/Login.module.css
@@ -31,7 +31,7 @@
   flex-shrink: 0;
   padding: 20px;
   border-radius: 30px;
-  background: #fff;
+  background: #ffffff;
   box-shadow: 0 8px 24px rgba(0, 0, 0, 0.3);
   display: flex;
   flex-direction: column;
@@ -81,7 +81,7 @@
     Noto Sans KR,
     sans-serif;
   font-size: 16px;
-  background: #fff;
+  background: #ffffff;
   padding-left: 15px;
   padding-right: 15px;
   box-sizing: border-box;
@@ -107,7 +107,7 @@
   height: 60px;
   flex-shrink: 0;
   padding: 15px;
-  color: #fff;
+  color: #ffffff;
   background-color: #a7cdcc;
   border: none;
   font-family:
