--- a/src/styles/Travel.module.css
+++ b/src/styles/Travel.module.css
@@ -9,8 +9,8 @@
 
 .pageButton {
   padding: 5px 10px;
-  border: 1px solid #ddd;
-  background-color: #fff;
+  border: 1px solid #dddddd;
+  background-color: #ffffff;
   cursor: pointer;
   transition: background-color 0.3s;
 }
@@ -27,8 +27,8 @@
 
 .navButton {
   padding: 5px 10px;
-  border: 1px solid #ddd;
-  background-color: #fff;
+  border: 1px solid #dddddd;
+  background-color: #ffffff;
   cursor: pointer;
   transition: background-color 0.3s;
 }
@@ -51,7 +51,7 @@
 
 /* 여행지 탐색 기본, 검색 */
 .container {
-  padding:15px;
+  padding: 15px;
   display: flex;
   overflow-y: hidden;
 }
@@ -120,13 +120,13 @@
   display: flex;
   margin-bottom: 10px;
   padding: 10px;
-  border: 1px solid #ddd;
+  border: 1px solid #dddddd;
   border-radius: 8px;
   align-items: center;
   justify-content: space-between;
-  background-color: #fff;
+  background-color: #ffffff;
   transition: box-shadow 0.3s ease;
-  height:108px;
+  height: 108px;
 }
 
 .placeItem:hover {
