--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -1,5 +1,11 @@
+.active {
+  font-weight: 700;
+  color: #000000;
+}
+
 .headerMenu {
   width: 100%;
+  height: 100%;
   flex-shrink: 0;
   color: #757575;
   font-style: normal;
@@ -12,33 +18,55 @@
   justify-content: space-between;
 }
 
-.headerLink {
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
-  width: auto;
-  height: 3.75vh;
-  padding: 0 1vw;
-  color: #333;
-  text-align: center;
-  font-family: 'Noto Sans KR', sans-serif;
-  font-size: 1.04vw;
-  font-weight: 400;
-  line-height: normal;
+.header {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+  display: flex;
   flex-direction: column;
-  flex-shrink: 0;
-  margin: 0 0.52vw;
+  align-items: center;
+  justify-content: center;
+  background-color: #ffffff;
+  color: #333333;
 }
 
-.headerLinkA {
-  color: #757575;
+.homeHeader {
+  background-image: url('../../public/assets/images/메인화면/ocean_header.png');
+  border-bottom: 3px solid rgb(255, 255, 255);
+}
+
+.headerContent {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 90%;
+  z-index: 1;
+}
+
+.navMenu {
+  display: flex;
+  gap: 80px;
+  color: #fff;
+}
+
+.navLink {
   text-decoration: none;
-  font-size: 0.83vw;
+  font-size: 18px;
+  font-weight: 500;
+  transition: color 0.3s;
+  border-radius: 5px;
+  text-align: center;
+  justify-content: center;
 }
 
-.headerLinkA:hover {
-  font-weight: 700;
-  color: #000000;
+.loginButton {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  color: #fff;
+  cursor: pointer;
 }
 
 .headerLinkLogin {
@@ -46,12 +74,12 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  border-radius: 50vw;
-  padding: 1vh 1.04vw;
+  width: 107px;
+  height: 45px;
+  border-radius: 50px;
   color: #555;
   text-align: center;
   font-family: 'Noto Sans KR', sans-serif;
-  font-size: 0.94vw;
   font-weight: 400;
   line-height: normal;
   position: relative;
@@ -60,19 +88,17 @@
   text-decoration: none;
   cursor: pointer;
   margin-left: auto;
-  margin-right: 4.49vw;
+  margin-right: 40px;
 }
 
 .headerLinkLogin img {
   margin-left: 0.52vw;
 }
 
-.headerLinkLogin:hover {
-  font-weight: 700;
-  color: #000000;
+.homeNavLink {
+  color: #fff;
 }
 
-.active {
-  font-weight: 700;
-  color: #000000;
+.otherNavLink {
+  color: #000;
 }
