--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -1,104 +1,108 @@
 .active {
-  font-weight: 700;
-  color: #000000;
+    font-weight: 700;
+    color: #000000;
 }
 
 .headerMenu {
-  width: 100%;
-  height: 100%;
-  flex-shrink: 0;
-  color: #757575;
-  font-style: normal;
-  font-weight: 500;
-  letter-spacing: -0.32px;
-  padding: 0;
-  list-style: none;
-  display: inline-flex;
-  align-items: center;
-  justify-content: space-between;
+    width: 100%;
+    height: 100%;
+    flex-shrink: 0;
+    color: #757575;
+    font-style: normal;
+    font-weight: 500;
+    letter-spacing: -0.32px;
+    padding: 0;
+    list-style: none;
+    display: inline-flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .header {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  background-size: cover;
-  background-position: center;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  background-color: #ffffff;
-  color: #333333;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #ffffff;
+    color: #333333;
 }
 
 .homeHeader {
-  background-image: url('../../public/assets/images/메인화면/ocean_header.png');
-  border-bottom: 3px solid rgb(255, 255, 255);
+    background-image: url('../../public/assets/images/메인화면/ocean_header.png');
+    border-bottom: 3px solid rgb(255, 255, 255);
 }
 
 .headerContent {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  width: 90%;
-  z-index: 1;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 90%;
+    z-index: 1;
 }
 
 .navMenu {
-  display: flex;
-  gap: 80px;
-  color: #fff;
+    display: flex;
+    gap: 80px;
+    color: #fff;
 }
 
-.navLink {
-  text-decoration: none;
-  font-size: 18px;
-  font-weight: 500;
-  transition: color 0.3s;
-  border-radius: 5px;
-  text-align: center;
-  justify-content: center;
+.navLink,.navLogin {
+    text-decoration: none;
+    font-size: 18px;
+    font-weight: 500;
+    transition: color 0.3s;
+    border-radius: 5px;
+    text-align: center;
+    justify-content: center;
+}
+
+.navLogin {
+    margin-top: -5px;
 }
 
 .loginButton {
-  display: flex;
-  align-items: center;
-  gap: 5px;
-  color: #fff;
-  cursor: pointer;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    color: #fff;
+    cursor: pointer;
 }
 
 .headerLinkLogin {
-  background-color: #f5f5f5;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 107px;
-  height: 45px;
-  border-radius: 50px;
-  color: #555;
-  text-align: center;
-  font-family: 'Noto Sans KR', sans-serif;
-  font-weight: 400;
-  line-height: normal;
-  position: relative;
-  z-index: 1;
-  letter-spacing: -0.32px;
-  text-decoration: none;
-  cursor: pointer;
-  margin-left: auto;
-  margin-right: 40px;
+    background-color: #f5f5f5;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 107px;
+    height: 45px;
+    border-radius: 50px;
+    color: #555;
+    text-align: center;
+    font-family: 'Noto Sans KR', sans-serif;
+    font-weight: 400;
+    line-height: normal;
+    position: relative;
+    z-index: 1;
+    letter-spacing: -0.32px;
+    text-decoration: none;
+    cursor: pointer;
+    margin-left: auto;
+    margin-right: 40px;
 }
 
 .headerLinkLogin img {
-  margin-left: 0.52vw;
+    margin-left: 0.52vw;
 }
 
 .homeNavLink {
-  color: #fff;
+    color: #fff;
 }
 
 .otherNavLink {
-  color: #000;
+    color: #000;
 }
