--- a/src/styles/Schedule.module.css
+++ b/src/styles/Schedule.module.css
@@ -1226,7 +1226,19 @@
   margin-right: 10px;
 }
 
-
+.noScheduleContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 30px;
+  color: #555;
+  width: 90vw;
+  height: 559px;
+  flex-shrink: 0;
+  border: 1px solid #d9d9d9;
+  background-color: #ffffff;
+}
 
 .noScheduleMessage {
   font-size: 22px;
@@ -1544,4 +1556,22 @@
   display: block;
   text-align: right;
   margin-top: 5px;
+}
+
+.noResults {
+  color: #555;
+  font-size: 16px;
+  text-align: center;
+  margin: 20px 0;
+  padding: 10px;
+}
+
+.noText {
+  margin-top: 60px;
+  color: #666;
+  text-align: center;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
 }
