검색 결과 없음 UI 제작 2차 시도

--- a/src/styles/Schedule.module.css
+++ b/src/styles/Schedule.module.css
@@ -197,7 +197,7 @@
 .createContainer {
   margin-left: 10%;
   width: 1296px;
-  height: 1080px;
+  height: fit-content;
 }
 
 .createContainer::before {
