--- a/src/styles/Schedule.module.css
+++ b/src/styles/Schedule.module.css
@@ -74,12 +74,19 @@
   justify-content: space-between;
 }
 
-.sunday {
+.sunday,
+.pastSunday {
+  color: red !important;
+}
+
+.saturday,
+.pastSaturday {
   color: blue !important;
 }
 
-.saturday {
-  color: red !important;
+.pastSunday,
+.pastSaturday {
+  opacity: 0.5;
 }
 
 .confirmButton {
@@ -197,7 +204,7 @@
 .createContainer {
   margin-left: 10%;
   width: 1296px;
-  height: 1080px;
+  height: fit-content;
 }
 
 .createContainer::before {
@@ -320,18 +327,6 @@
   flex-direction: column;
   margin-bottom: 20px;
   transition: box-shadow 0.3s ease;
-}
-
-.hoverMenu {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 417px;
-  height: 308px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transition: opacity 0.3s ease;
 }
 
 .threeDots {
@@ -682,8 +677,8 @@
   width: 30px;
   height: 30px;
   border-radius: 50%;
-  background-color: #74a5da; /* 원 색상 */
-  color: white; /* 텍스트 색상 */
+  background-color: #74a5da;
+  color: white;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1046,6 +1041,7 @@
   padding: 10px;
   background-color: #e0e0e0;
   border-bottom: 1px solid #e0e0e0;
+  height: 72vh;
 }
 
 .sentMessage,
@@ -1276,9 +1272,9 @@
 .scheduleList {
   margin-top: 40px;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   gap: 20px;
-  margin-left: -7%;
+  margin-left: 10%;
 }
 
 .scheduleItem {
